--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,16 +19,9 @@
     "notifications",
     "alarms"
   ],
-  "content_scripts": [
-    {
-      "run_at": "document_start",
-      "all_frames": true,
-      "js": [
-        "content.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "shire_blocker@example.com"
     }
-  ]
+  }
 }
