--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,13 @@ path = "src/main.rs"
 name = "shire_bridge"
 path = "src/bin/bridge.rs"
 
+[[bin]]
+name = "shire_daemon"
+path = "src/bin/daemon/main.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dirs = "6.0.0"
+toml = "0.9.2"
+launchctl = "0.3.2"
