--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ dirs = "6.0.0"
 toml = "0.9.2"
 launchctl = "0.3.2"
 clap = { version = "4.5.41", features = ["derive"] }
+regex = "1.11.1"
+url = "2.5.4"
