--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,6 +19,17 @@
     "notifications",
     "alarms"
   ],
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
+      "run_at": "document_start"
+    }
+  ],
   "browser_specific_settings": {
     "gecko": {
       "id": "shire_blocker@example.com"
