--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,15 +21,15 @@
   ],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
+      "run_at": "document_start",
+      "all_frames": true,
       "js": [
         "content.js"
       ],
-      "run_at": "document_start"
+      "matches": [
+        "<all_urls>"
+      ]
     }
-  ],
   "browser_specific_settings": {
     "gecko": {
       "id": "shire_blocker@example.com"
